--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 body {
   background: rgb(2, 0, 36);
-  background: linear-gradient(14deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 49%, rgba(5, 75, 120, 1) 82%, rgba(0, 212, 255, 1) 100%);
 }
 
 .main-content-wrapper {
   display: flex;
-  /* justify-content: space-between; */
-  gap: 20rem;
+}
+
+.main-content-spacer {
+  flex-grow: 1;
 }
