--- a/src/css/CharacterSelect.css
+++ b/src/css/CharacterSelect.css
@@ -13,6 +13,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  /* position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto; */
+  flex-grow: 1;
 }
 
 .character-icon {
