--- a/src/css/CurrentTeam.css
+++ b/src/css/CurrentTeam.css
@@ -1,5 +1,13 @@
 .selected-character-portrait {
-  display: flex;
   max-width: 300px;
   width: 10vw;
+}
+
+.selected-character-wrapper {
+  display: flex;
+  font-family: Montserrat;
+  color: white;
+  display: flex;
+  align-items: center;
+  text-shadow: 2px 2px black;
 }
