--- a/src/css/CurrentTeam.css
+++ b/src/css/CurrentTeam.css
@@ -1,13 +1,80 @@
-.selected-character-portrait {
-  max-width: 300px;
-  width: 10vw;
+.current-team-wrapper {
+  background-color: #151515;
+  width: 10%;
+  box-shadow: 1px 1px 10px;
+  padding-bottom: 10px;
+  min-height: 100vh;
+  position: absolute;
 }
+
+.current-team-wrapper p {
+  color: white;
+  font-family: Montserrat;
+  /* text-align: center; */
+}
+
+.selected-character-wrapper p {
+  max-width: 50%;
+  font-size: clamp(0.5rem, 1vw, 1rem); /* min 200px, preferred 50% of viewport width, max 800px */
+}
+
+.selected-character-portrait {
+  width: clamp(60px, 10vw, 240px); /* min 200px, preferred 50% of viewport width, max 800px */
+  height: auto; /* Maintains aspect ratio */
+}
+
+.point-info {
+  display: flex;
+  flex-direction: column;
+  font-size: clamp(0.5rem, 1vw, 1rem); /* min 200px, preferred 50% of viewport width, max 800px */
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.point-info button {
+  background-color: transparent;
+  color: rgb(166, 0, 255);
+  border: 1px solid rgb(166, 0, 255);
+  font-family: Montserrat;
+  transition: all 500ms ease-out;
+}
+
+.point-info button:hover {
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(255, 255, 255);
+}
+
+/* 
 
 .selected-character-wrapper {
   display: flex;
   font-family: Montserrat;
   color: white;
-  display: flex;
   align-items: center;
   text-shadow: 2px 2px black;
+  border: 1px solid black;
+  font-weight: 700;
+
+  font-size: clamp(1rem, 2.5vw, 2rem);
 }
+
+.current-team-wrapper {
+  height: fit-content;
+  display: flex;
+
+  flex-direction: row;
+  background-color: rgb(31, 25, 26);
+  min-height: 100px;
+
+  margin-top: -10px;
+}
+
+.character-placeholder {
+  color: white;
+  flex-grow: 1;
+  font-family: Montserrat;
+  text-shadow: 2px 2px black;
+  padding: 10px;
+  border: 1px solid black;
+} */
