--- a/src/css/CurrentTeam.css
+++ b/src/css/CurrentTeam.css
@@ -44,6 +44,10 @@
   border: 1px solid rgb(255, 255, 255);
 }
 
+.hovered-character-wrapper {
+  opacity: 0.5;
+}
+
 .selected-character-wrapper {
   animation: reveal 1s forwards;
   animation-delay: 0.1s;
