clean up files and add readme

--- a/src/css/CurrentTeam.css
+++ b/src/css/CurrentTeam.css
@@ -70,9 +70,8 @@
   flex-flow: row wrap;
   background-color: #151515;
   gap: 20px;
-  /* position: absolute;
-  bottom: 0; */
   width: 100vw;
+  margin-top: 10px;
 }
 .current-team-wrapper-small p {
   color: white;
